<resources>
    <string name="app_name">Mobile_application_project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="create_an_account">Create an account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="continue_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="default_web_client_id">887944600673-6rlru5s3a2kekqnqh7ons4frvm2m4sb3.apps.googleusercontent.com</string>
    <string name="welcome">Welcome</string>
    <string name="prompt_email">Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sing In Short</string>
    <string name="action_sign_in">Sing In</string>
    <string name="sign_out">Sing Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="login_failed">Failed Login</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="profile_photo">Profile Photo:</string>
    <string name="change">CHANGE</string>
    <string name="name"> Name: </string>
    <string name="your_name">Your Name</string>
    <string name="change_name">Type changed name</string>
    <string name="surname"> Surname: </string>
    <string name="change_surname">Type changed surname</string>
    <string name="email">Email: </string>
    <string name="your_email">Your Email</string>
    <string name="change_email">Type changed email</string>
    <string name="age">Age: </string>
    <string name="eg_25">eg. 25</string>
    <string name="change_age">Type changed age</string>
    <string name="username">Username:</string>
    <string name="your_username">Your username</string>
    <string name="change_username">Type changed username</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="settings">settings</string>
    <string name="settings_preference_key">SETTINGS_PREFERENCE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_start">this is start</string>
    <string name="this_is_settings">this is settings</string>
    <string name="this_is_history">this is history</string>
    <!-- Preference Titles -->
    <string name="messages_header">Account Preferences</string>
    <string name="add_header">Additional Settings</string>
    <string name="logo">logo</string>
    <string name="weather">weather</string>
    <string name="workout">workout</string>
    <string name="friends">friends</string>
    <string name="request">request</string>
	<string name="home">home</string>
    <string name="messages">messages</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="start">Start</string>
    <string name="how_did_it_go_notes_he">How did it go? Notes he</string>
    <string name="date_and_time">Date and time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="delete">delete</string>
    <string name="back">back</string>
    <string name="location">location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_loading">map loading...</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_start_tracking">Start Tacking</string>
    <string name="button_stop_tracking">Stop Tacking</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
</resources>